config.json: updated icon in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,8 @@
             {
                 "label": "Style Guide",
                 "url": "/style-guide",
-                "style": "link"
+                "style": "link",
+                "icon": "facebook"
             },
             {
                 "label": "Sign Up",
