config.json: updated icon in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
                 "label": "Style Guide",
                 "url": "/style-guide",
                 "style": "link",
-                "icon": "facebook"
+                "icon": "arrow-left"
             },
             {
                 "label": "Sign Up",
